--- a/public/index.html
+++ b/public/index.html
@@ -89,7 +89,7 @@
         </iframe>
       </div>
 
-      <h3>Công Cụ Hỗ Trợ 1ặc</h3>
+      <h3>Công Cụ Hỗ Trợ học tập</h3>
       
       <!-- Tools Grid -->
       <div class="tools-grid">
